--- a/front_end/advme-react/package.json
+++ b/front_end/advme-react/package.json
@@ -1,6 +1,5 @@
 {
   "name": "advme-react",
-  "homepage": "http://dmarcr1997.github.io/ADVANCEME",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,9 +14,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
