--- a/front_end/advme-react/package.json
+++ b/front_end/advme-react/package.json
@@ -12,7 +12,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "reactstrap": "^8.4.1"
   },
   "scripts": {
     "start": "PORT=3006 react-scripts start",
