--- a/back_end/advMe-api/config/database.yml
+++ b/back_end/advMe-api/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: dcdtmqle66o5qk
+  database: dd0k9pukpqs4qo
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -37,7 +37,7 @@ development:
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  host: ec2-34-193-117-204.compute-1.amazonaws.com
+  host: ec2-35-173-94-156.compute-1.amazonaws.com
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: dcdtmqle66o5qk
+  database: dd0k9pukpqs4qo
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: dcdtmqle66o5qk
+  database: dd0k9pukpqs4qo
   username: <%= ENV['ADVME_API_DB_USERNAME'] %>
   password: <%= ENV['ADVME_API_DATABASE_PASSWORD'] %>
